update gradle files

--- a/Plugin/build.gradle
+++ b/Plugin/build.gradle
@@ -2,12 +2,10 @@ group 'com.sxtanna.ver'
 version '1.0'
 
 dependencies {
-
     compileOnly "org.spigotmc:spigot-api:+"
 
-    compile project(":Compat")
-    compile project(":Version1_8")
-    compile project(":Version1_9")
-    compile project(":Version1_10")
-
+    implementation project(":Compat")
+    implementation project(":Version1_8")
+    implementation project(":Version1_9")
+    implementation project(":Version1_10")
 }
