--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,14 @@
-group 'com.sxtanna.ver'
-version '1.0'
-
-buildscript {
-
-    ext {
-        versionShadow = '2.0.2'
-        versionKotlin = '1.2.20'
-    }
-
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versionKotlin"
-        classpath "com.github.jengelman.gradle.plugins:shadow:$versionShadow"
-    }
-
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
 }
 
 subprojects {
-
     apply plugin: 'kotlin'
     apply plugin: 'com.github.johnrengelman.shadow'
 
+    group 'com.sxtanna.ver'
+    version '1.0'
 
     repositories {
 
@@ -46,9 +27,7 @@ subprojects {
     }
 
     dependencies {
-
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     }
 
     sourceCompatibility = 1.8
