--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
     id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
 }
 
 subprojects {
-    apply plugin: 'kotlin'
+    apply plugin: 'java'
     apply plugin: 'com.github.johnrengelman.shadow'
 
     group 'com.sxtanna.ver'
     version '1.0'
 
-    repositories {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
+    repositories {
         maven {
             name = "bungee"
             url "https://oss.sonatype.org/content/repositories/snapshots"
@@ -23,23 +24,7 @@ subprojects {
 
         mavenLocal()
         mavenCentral()
-
     }
-
-    dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    }
-
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-    }
-
 }
 
 
